--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,18 @@
     <groupId>org.learning</groupId>
     <artifactId>learning</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--<dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.2</version>
+        </dependency>
+    </dependencies>-->
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
 
 </project>
